[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainDDgap"
description = "3D DenseNet pipeline for chronological brain age prediction"
readme = "README.md"
requires-python = "=3.10"
# List only the core Python dependencies here
dependencies = [
    "torch",
    "monai",
    "nibabel",
    "numpy"
]

# This creates the 'predict-age' command in the terminal
[project.scripts]
predict_brainage = "predict_brainage:main"
predict_brainDD = "predict_brainDD:main"

# Tells pip that your actual code logic is inside the 'src' folder
[tool.setuptools.packages.find]
where = ["src"]