[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainDDgap"
description = "Deep learning-based prediction of disease duration and age in people with Multiple Sclerosis from 3D T1w or FLAIR 🧠 MRI"
readme = "README.md"
requires-python = "=3.10"
# List only the core Python dependencies here
dependencies = [
    "torch",
    "monai",
    "nibabel",
    "numpy"
]

# This creates the 'predict-brainage' and 'predict_brainDD' commands in the terminal
[project.scripts]
predict_brainage = "predict_brainage:main"
predict_brainDD = "predict_brainDD:main"

# Tells pip that your actual code logic is inside the 'src' folder
[tool.setuptools.packages.find]
where = ["src"]